[tool.poetry]
name = "csm-test-utils"
version = "0.2.11"
description = "Utils for testing infructructure created by customer service monitoring"
authors = ["OTC customer service monitroing team"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/opentelekomcloud-infra/csm-test-utils"

[tool.poetry.dependencies]
python = "^3.7"

ocomone = "^0.4.1"
requests = "^2.22"
influx_line_protocol = "^0.1.3"
wrapt = "^1.11.2"
PyYAML = "^5.1.2"
botocore = ">=1.13"
boto3 = ">=1.10"
flask = "^1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
