[metadata]
name = csm-test-utils
version = 0.2.15
summary = Utils for testing infrastructure created by customer service monitoring
author = OTC customer service monitoring team
license = Apache-2.0
license_file = LICENSE
description-file = README.md
url = https://github.com/opentelekomcloud-infra/csm-test-utils

classifiers =
      Framework :: Flask
      Programming Language :: Python :: 3

[files]
packages =
  csm_test_utils

[wheel]
universal = 1

[options]
include_package_data = True
packages = find:
install_requires =
    ocomone>=0.4.1
    requests>=2.22
    influx_line_protocol>=0.1.3
    wrapt>=1.11
    PyYAML>=5.1.2,<5.2
    botocore>=1.13
    boto3>=1.10
    flask>=1.1,<1.2
