[metadata]
name = csm-test-utils
summary = Utils for testing infrastructure created by customer service monitoring
author = OTC customer service monitoring team
license = Apache-2.0
license_file = LICENSE
description-file = README.rst
url = https://github.com/opentelekomcloud-infra/csm-test-utils
platform = any

classifiers =
    Framework :: Flask
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
  csm_test_utils

[wheel]
universal = 1
